[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/GameHUD.gd" id="1_hud"]
[ext_resource type="PackedScene" path="res://scenes/ui/HealthBar.tscn" id="2_health"]
[ext_resource type="PackedScene" path="res://scenes/ui/WeaponDisplay.tscn" id="3_weapon"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_hud")

[node name="HealthBar" parent="." instance=ExtResource("2_health")]

[node name="WeaponDisplay" parent="." instance=ExtResource("3_weapon")]

[node name="ObjectiveText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -120.0
offset_right = 300.0
offset_bottom = -40.0
theme_override_font_sizes/font_size = 14
text = "OBJECTIVES:
• Eliminate enemies
• Collect weapons  
• Survive the station"
vertical_alignment = 1

[node name="ControlsHint" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 120.0
theme_override_font_sizes/font_size = 12
text = "CONTROLS:
WASD - Move
SPACE - Jump
CLICK - Attack
ESC - Pause

Walk over items to pick up!"
horizontal_alignment = 2

[node name="MiniMap" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 140.0
offset_right = -20.0
offset_bottom = 240.0
color = Color(0, 0, 0, 0.5)

[node name="Label" type="Label" parent="MiniMap"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -10.0
offset_right = 25.0
offset_bottom = 10.0
theme_override_font_sizes/font_size = 10
text = "MINI MAP"
horizontal_alignment = 1